# corn

./: README.md  pyproject.toml
EXAMPLE/: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  build.sh
EXAMPLE/cmake/modules/: coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  folders.cmake  install-config.cmake  install-rules.cmake  link.cmake  lint-targets.cmake  prelude.cmake  project-is-top-level.cmake  spell-targets.cmake  spell.cmake  variables.cmake
EXAMPLE/include/: my_library.hpp
EXAMPLE/src/: main.cpp
pycorn_maker/: __main__.py  cli.py  cmake_modules.py  project.py  templates.py  tools.py  utils.py  validators.py
