[tool.poetry]
name = "pycorn-maker"
version = "0.1.0"
description = "Software for quickly creating C++ projects"
authors = ["alexeev-prog <alexeev.dev@mail.ru>"]
license = "GNU LGPL 2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.9.4"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
